--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                                 <!-- Logo -->
                                 
 
-                                <img src="c:\Users\maxwi\Downloads\LOgo ong - Editado.png" alt="" style="width: 400px; height: 420px">
+                                <img src="https://github.com/MaxwilliamSena/filhosdaamazonia/blob/main/LOgo%20ong%20-%20Editado.png?raw=true" alt="" style="width: 400px; height: 420px">
 
                                 <!-- Passaros -->
                                 <path d="M100 100 Q105 95 110 100 Q105 105 100 100" fill="#374151" class="floating"/>
@@ -1237,7 +1237,7 @@
                 <div>
                     <div class="flex items-center space-x-3 mb-4">
                         <div class="w-10 h-10 rounded-full flex items-center justify-center">
-                            <img src="c:\Users\maxwi\Downloads\LOgo ong - Editado.png" alt="" >
+                            <img src="https://github.com/MaxwilliamSena/filhosdaamazonia/blob/main/LOgo%20ong%20-%20Editado.png?raw=true>
                         </div>
                         <div>
                             <h3 class="text-lg font-bold">Filhos do Amazonas</h3>
@@ -1987,3 +1987,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9805d0c851b3dd50',t:'MTc1ODA4Mjg3My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
