--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                         </svg>
                     </div>
                     <div>
-                        <h1 class="text-2xl font-black gradient-text">Filhos do Amazonas</h1>
+                        <h1 class="text-2xl font-black gradient-text">Filhos do Amazonas site de eventos</h1>
                         <p class="text-sm text-green-400 font-medium">Preservando Nossa Floresta</p>
                     </div>
                 </div>
@@ -3096,3 +3096,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9805d0c851b3dd50',t:'MTc1ODA4Mjg3My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
