--- a/index.html
+++ b/index.html
@@ -1083,25 +1083,25 @@
                 <!-- Evento 1 -->
                 <div class="glass-effect rounded-3xl p-8 floating-card card-hover-effect bg-white border border-green-100">
                     <div class="text-center mb-6">
-                        <div class="text-5xl mb-4">🌳</div>
-                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Reflorestamento Comunitário</h3>
-                        <p class="text-gray-600">Plantio de mudas nativas para recuperar áreas degradadas</p>
+                        <div class="text-5xl mb-4">✂️</div>
+                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Resenha da Beleza</h3>
+                        <p class="text-gray-600">Workshow de beleza</p>
                     </div>
                     <div class="space-y-4 mb-6">
                         <div class="bg-green-50 p-4 rounded-xl border border-green-100">
                             <p class="text-gray-500 text-sm">Local</p>
-                            <p class="text-gray-800 font-semibold">Reserva Florestal</p>
+                            <p class="text-gray-800 font-semibold">R.Rio Araçatuba,10, São josé operario II</p>
                         </div>
                         <div class="bg-green-50 p-4 rounded-xl border border-green-100">
                             <p class="text-gray-500 text-sm">Voluntários</p>
-                            <p class="text-gray-800 font-semibold">150+ pessoas</p>
+                            <p class="text-gray-800 font-semibold">50+ pessoas</p>
                         </div>
                     </div>
                     <div class="text-center mb-6">
                         <div class="bg-gradient-to-r from-green-500 to-emerald-600 text-white px-6 py-3 rounded-2xl font-bold text-lg mb-2">
-                            15 Jan 2024
+                            22 Set 2025
                         </div>
-                        <p class="text-gray-600">08:00 - 16:00</p>
+                        <p class="text-gray-600">08:00 - 17:00</p>
                     </div>
                     <button onclick="showEventDetails('event1')" class="w-full bg-gradient-to-r from-green-500 to-emerald-600 text-white px-6 py-3 rounded-full font-semibold hover:shadow-lg transition-all">
                         Descobrir Mais
@@ -1112,27 +1112,27 @@
                 <div class="glass-effect rounded-3xl p-8 floating-card card-hover-effect bg-white border border-green-100">
                     <div class="text-center mb-6">
                         <div class="text-5xl mb-4">🐆</div>
-                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Proteção da Fauna</h3>
-                        <p class="text-gray-600">Monitoramento e cuidado dos animais silvestres</p>
+                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Em Breve</h3>
+                        <p class="text-gray-600">----------------------------------------------</p>
                     </div>
                     <div class="space-y-4 mb-6">
                         <div class="bg-green-50 p-4 rounded-xl border border-green-100">
                             <p class="text-gray-500 text-sm">Local</p>
-                            <p class="text-gray-800 font-semibold">Parque Nacional</p>
+                            <p class="text-gray-800 font-semibold">---------------</p>
                         </div>
                         <div class="bg-green-50 p-4 rounded-xl border border-green-100">
-                            <p class="text-gray-500 text-sm">Biólogos</p>
-                            <p class="text-gray-800 font-semibold">20+ especialistas</p>
+                            <p class="text-gray-500 text-sm">Voluntarios</p>
+                            <p class="text-gray-800 font-semibold">-----------------</p>
                         </div>
                     </div>
                     <div class="text-center mb-6">
                         <div class="bg-gradient-to-r from-green-600 to-teal-600 text-white px-6 py-3 rounded-2xl font-bold text-lg mb-2">
-                            22 Jan 2024
+                            -----------
                         </div>
-                        <p class="text-gray-600">06:00 - 18:00</p>
+                        <p class="text-gray-600">-------------</p>
                     </div>
-                    <button onclick="showEventDetails('event2')" class="w-full bg-gradient-to-r from-green-600 to-teal-600 text-white px-6 py-3 rounded-full font-semibold hover:shadow-lg transition-all">
-                        Descobrir Mais
+                    <button  class="w-full bg-gradient-to-r from-green-600 to-teal-600 text-white px-6 py-3 rounded-full font-semibold hover:shadow-lg transition-all">
+                        --------------
                     </button>
                 </div>
 
@@ -1140,27 +1140,27 @@
                 <div class="glass-effect rounded-3xl p-8 floating-card card-hover-effect bg-white border border-green-100">
                     <div class="text-center mb-6">
                         <div class="text-5xl mb-4">🏘️</div>
-                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Apoio às Comunidades</h3>
-                        <p class="text-gray-600">Capacitação e desenvolvimento sustentável local</p>
+                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Em Breve</h3>
+                        <p class="text-gray-600">-----------------------------------------------</p>
                     </div>
                     <div class="space-y-4 mb-6">
                         <div class="bg-green-50 p-4 rounded-xl border border-green-100">
                             <p class="text-gray-500 text-sm">Local</p>
-                            <p class="text-gray-800 font-semibold">Aldeia Indígena</p>
+                            <p class="text-gray-800 font-semibold">---------------</p>
                         </div>
                         <div class="bg-green-50 p-4 rounded-xl border border-green-100">
-                            <p class="text-gray-500 text-sm">Famílias</p>
-                            <p class="text-gray-800 font-semibold">80+ beneficiadas</p>
+                            <p class="text-gray-500 text-sm">Voluntarios</p>
+                            <p class="text-gray-800 font-semibold">----------------</p>
                         </div>
                     </div>
                     <div class="text-center mb-6">
                         <div class="bg-gradient-to-r from-emerald-500 to-green-600 text-white px-6 py-3 rounded-2xl font-bold text-lg mb-2">
-                            28 Jan 2024
+                            -----------
                         </div>
-                        <p class="text-gray-600">09:00 - 17:00</p>
+                        <p class="text-gray-600">-----------</p>
                     </div>
-                    <button onclick="showEventDetails('event3')" class="w-full bg-gradient-to-r from-emerald-500 to-green-600 text-white px-6 py-3 rounded-full font-semibold hover:shadow-lg transition-all">
-                        Descobrir Mais
+                    <button class="w-full bg-gradient-to-r from-emerald-500 to-green-600 text-white px-6 py-3 rounded-full font-semibold hover:shadow-lg transition-all">
+                        -------------
                     </button>
                 </div>
 
@@ -1168,27 +1168,27 @@
                 <div class="glass-effect rounded-3xl p-8 floating-card card-hover-effect bg-white border border-green-100">
                     <div class="text-center mb-6">
                         <div class="text-5xl mb-4">💧</div>
-                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Preservação dos Rios</h3>
-                        <p class="text-gray-600">Limpeza e monitoramento da qualidade da água</p>
+                        <h3 class="text-2xl font-bold text-gray-800 mb-2">Em Breve</h3>
+                        <p class="text-gray-600">-----------------------------------</p>
                     </div>
                     <div class="space-y-4 mb-6">
                         <div class="bg-green-50 p-4 rounded-xl border border-green-100">
                             <p class="text-gray-500 text-sm">Local</p>
-                            <p class="text-gray-800 font-semibold">Rio Amazonas</p>
+                            <p class="text-gray-800 font-semibold">----------</p>
                         </div>
                         <div class="bg-green-50 p-4 rounded-xl border border-green-100">
                             <p class="text-gray-500 text-sm">Voluntários</p>
-                            <p class="text-gray-800 font-semibold">100+ pessoas</p>
+                            <p class="text-gray-800 font-semibold">------------</p>
                         </div>
                     </div>
                     <div class="text-center mb-6">
                         <div class="bg-gradient-to-r from-teal-500 to-cyan-600 text-white px-6 py-3 rounded-2xl font-bold text-lg mb-2">
-                            05 Fev 2024
+                            -----------
                         </div>
-                        <p class="text-gray-600">07:00 - 15:00</p>
+                        <p class="text-gray-600">-------------</p>
                     </div>
-                    <button onclick="showEventDetails('event4')" class="w-full bg-gradient-to-r from-teal-500 to-cyan-600 text-white px-6 py-3 rounded-full font-semibold hover:shadow-lg transition-all">
-                        Descobrir Mais
+                    <button class="w-full bg-gradient-to-r from-teal-500 to-cyan-600 text-white px-6 py-3 rounded-full font-semibold hover:shadow-lg transition-all">
+                        --------------
                     </button>
                 </div>
             </div>
@@ -2809,28 +2809,25 @@
     // Dados dos eventos amazônicos
         const eventData = {
             event1: {
-                title: "🌳 Reflorestamento Comunitário",
+                title: "✂️ Resenha da Beleza",
                 info: [
-                    "📅 <strong>Data:</strong> 15 de Janeiro de 2024",
-                    "🕘 <strong>Horário:</strong> 08:00 às 16:00",
-                    "📍 <strong>Local:</strong> Reserva Florestal - Área de Recuperação",
-                    "👥 <strong>Voluntários:</strong> 150+ pessoas confirmadas",
-                    "🎯 <strong>Missão:</strong> Plantar 1000 mudas nativas para recuperar áreas degradadas"
+                    "📅 <strong>Data:</strong> 22 de setembro 2025",
+                    "🕘 <strong>Horário:</strong> 08:00 às 17:00",
+                    "📍 <strong>Local:</strong> R.Rio Araçatuba,10 , São Jose Operario II",
+                    "👥 <strong>Voluntários:</strong> 50+ pessoas confirmadas",
+                    "🎯 <strong>Missão:</strong> Divulgar a ong e fazer um evento sobre beleza para todas as comunidades"
                 ],
                 schedule: [
-                    "08:00 - Credenciamento e café da manhã",
-                    "08:30 - Briefing sobre técnicas de plantio",
-                    "09:00 - Início do plantio das mudas",
+                    "08:00 - Credenciamento",
+                    "08:30 - Briefing sobre técnicas de cortes",
+                    "09:00 - Inicio de palestras",
                     "12:00 - Almoço comunitário",
-                    "14:00 - Continuação do plantio",
+                    "14:00 - Continuação das palestras",
                     "15:30 - Atividades educativas",
                     "16:00 - Encerramento e celebração"
                 ],
                 extraInfo: [
                     "• Roupas confortáveis e calçados fechados obrigatórios",
-                    "• Protetor solar e repelente fornecidos",
-                    "• Ferramentas e mudas incluídas",
-                    "• Certificado de participação",
                     "• Transporte disponível do centro da cidade"
                 ]
             },
