--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,7 @@
                 <div>
                     <div class="flex items-center space-x-3 mb-4">
                         <div class="w-10 h-10 rounded-full flex items-center justify-center">
-                            <img src="c:\Users\maxwi\Downloads\LOgo ong - Editado.png" alt="" >
+                            <img src="https://github.com/MaxwilliamSena/filhosdaamazonia/blob/main/LOgo%20ong%20-%20Editado.png?raw=true" alt="" >
                         </div>
                         <div>
                             <h3 class="flex text-lg font-bold">Filhos do Amazonas</h3>
